Scrollbar fixes.

--- a/question/static/students.css
+++ b/question/static/students.css
@@ -26,6 +26,9 @@ body {
 	padding: 1.7em;
 	height: 598px;  /* 632 - 2*17 = #main height - #question padding */
 }
+#answers {
+	height: 538px;
+}
 
 #question {	width: 690px; }
 #answers { width: 521px; } /* 1280 - 690 - 4*17 - 1 = body width - #question width - 2*#question padding - 2*#answers padding - #question border-right */
@@ -43,6 +46,9 @@ body {
 #main.hide #answers,
 #main.hide #overview {
 	height: 716px; /* 750 - 2*17 = body height - 2*#question padding */
+}
+#main.hide #answers {
+	height: 656px;
 }
 
 
